crates/lm-parser/src/snapshots/lm_parser__tests__error_missing_eq_in_let.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 3
  }
}

=== Diagnostics ===
[E0107] error: expected `=` in let binding
