crates/lm-parser/src/snapshots/lm_parser__tests__error_missing_semicolon.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "LetDef",
        "name": "x",
        "type_annotation": null,
        "value": {
          "kind": {
            "type": "Literal",
            "value": {
              "kind": "Int",
              "value": 42
            }
          },
          "span": {
            "file_id": 0,
            "start": 8,
            "end": 10
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 10
      }
    },
    {
      "kind": {
        "type": "LetDef",
        "name": "y",
        "type_annotation": null,
        "value": {
          "kind": {
            "type": "Literal",
            "value": {
              "kind": "Int",
              "value": 10
            }
          },
          "span": {
            "file_id": 0,
            "start": 19,
            "end": 21
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 11,
        "end": 22
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 22
  }
}

=== Diagnostics ===
[E0105] error: expected `;` after let binding
