crates/lm-parser/src/snapshots/lm_parser__tests__error_unclosed_paren.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "LetDef",
        "name": "x",
        "type_annotation": null,
        "value": {
          "kind": {
            "type": "FnCall",
            "callee": {
              "kind": {
                "type": "Ident",
                "name": "f"
              },
              "span": {
                "file_id": 0,
                "start": 8,
                "end": 9
              }
            },
            "args": [
              {
                "kind": {
                  "type": "Literal",
                  "value": {
                    "kind": "Int",
                    "value": 1
                  }
                },
                "span": {
                  "file_id": 0,
                  "start": 10,
                  "end": 11
                }
              },
              {
                "kind": {
                  "type": "Literal",
                  "value": {
                    "kind": "Int",
                    "value": 2
                  }
                },
                "span": {
                  "file_id": 0,
                  "start": 13,
                  "end": 14
                }
              }
            ]
          },
          "span": {
            "file_id": 0,
            "start": 8,
            "end": 14
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 15
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 15
  }
}

=== Diagnostics ===
[E0104] error: unclosed `(` in function call
