crates/lm-parser/src/snapshots/lm_parser__tests__float_literal.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "LetDef",
        "name": "x",
        "type_annotation": null,
        "value": {
          "kind": {
            "type": "Literal",
            "value": {
              "kind": "Float",
              "value": 3.14
            }
          },
          "span": {
            "file_id": 0,
            "start": 8,
            "end": 12
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 13
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 13
  }
}
