crates/lm-parser/src/snapshots/lm_parser__tests__fn_with_annotations.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "FnDef",
        "name": "add",
        "effect": "pure",
        "params": [
          {
            "name": "a",
            "type_annotation": {
              "kind": {
                "type": "Name",
                "name": "Int"
              },
              "span": {
                "file_id": 0,
                "start": 10,
                "end": 13
              }
            },
            "span": {
              "file_id": 0,
              "start": 7,
              "end": 13
            }
          },
          {
            "name": "b",
            "type_annotation": {
              "kind": {
                "type": "Name",
                "name": "Int"
              },
              "span": {
                "file_id": 0,
                "start": 18,
                "end": 21
              }
            },
            "span": {
              "file_id": 0,
              "start": 15,
              "end": 21
            }
          }
        ],
        "return_type": {
          "kind": {
            "type": "Name",
            "name": "Int"
          },
          "span": {
            "file_id": 0,
            "start": 26,
            "end": 29
          }
        },
        "body": {
          "kind": {
            "type": "Block",
            "exprs": [
              {
                "kind": {
                  "type": "BinaryOp",
                  "op": "Add",
                  "lhs": {
                    "kind": {
                      "type": "Ident",
                      "name": "a"
                    },
                    "span": {
                      "file_id": 0,
                      "start": 32,
                      "end": 33
                    }
                  },
                  "rhs": {
                    "kind": {
                      "type": "Ident",
                      "name": "b"
                    },
                    "span": {
                      "file_id": 0,
                      "start": 36,
                      "end": 37
                    }
                  }
                },
                "span": {
                  "file_id": 0,
                  "start": 32,
                  "end": 37
                }
              }
            ]
          },
          "span": {
            "file_id": 0,
            "start": 30,
            "end": 39
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 39
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 39
  }
}
